@@ -12,7 +12,11 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
 
 public class SentryHandlerIT {
-    private static final Logger logger = Logger.getLogger(SentryHandlerIT.class.getName());
+    /*
+     We filter out loggers that start with `com.getsentry.raven`, so we deliberately
+     use a custom logger name here.
+     */
+    private static final Logger logger = Logger.getLogger("SentryHandlerIT: jul");
     private SentryStub sentryStub;
 
     @BeforeMethod
